package services

import (
	"context"

	"github.com/baskint/bidding-analysis/internal/store"
)

// AnalyticsService implements the gRPC analytics service
type AnalyticsService struct {
	campaignStore *store.CampaignStore
	bidStore      *store.BidStore
	// Uncomment when protobuf is generated
	// pb.UnimplementedAnalyticsServiceServer
}

// NewAnalyticsService creates a new AnalyticsService instance
func NewAnalyticsService(campaignStore *store.CampaignStore, bidStore *store.BidStore) *AnalyticsService {
	return &AnalyticsService{
		campaignStore: campaignStore,
		bidStore:      bidStore,
	}
}

// GetCampaignStats returns campaign performance metrics (placeholder implementation)
func (s *AnalyticsService) GetCampaignStats(ctx context.Context, req interface{}) (interface{}, error) {
	// TODO: Implement when protobuf is generated
	return nil, nil
}

// GetFraudAlerts returns detected fraud patterns (placeholder implementation)
func (s *AnalyticsService) GetFraudAlerts(ctx context.Context, req interface{}) (interface{}, error) {
	// TODO: Implement when protobuf is generated
	return nil, nil
}

// GetPredictionAccuracy returns ML model performance metrics (placeholder implementation)
func (s *AnalyticsService) GetPredictionAccuracy(ctx context.Context, req interface{}) (interface{}, error) {
	// TODO: Implement when protobuf is generated
	return nil, nil
}
