package services

import (
	"context"

	"github.com/baskint/bidding-analysis/internal/config"
	"github.com/baskint/bidding-analysis/internal/store"
)

// BiddingService implements the gRPC bidding service
type BiddingService struct {
	bidStore *store.BidStore
	config   *config.Config
	// Uncomment when protobuf is generated
	// pb.UnimplementedBiddingServiceServer
}

// NewBiddingService creates a new BiddingService instance
func NewBiddingService(bidStore *store.BidStore, cfg *config.Config) *BiddingService {
	return &BiddingService{
		bidStore: bidStore,
		config:   cfg,
	}
}

// ProcessBid handles incoming bid requests (placeholder implementation)
func (s *BiddingService) ProcessBid(ctx context.Context, req interface{}) (interface{}, error) {
	// TODO: Implement when protobuf is generated
	// This is a placeholder to make the code compile
	return nil, nil
}

// GetBidHistory returns historical bid data (placeholder implementation)
func (s *BiddingService) GetBidHistory(ctx context.Context, req interface{}) (interface{}, error) {
	// TODO: Implement when protobuf is generated
	return nil, nil
}

// StreamBidUpdates provides real-time bid updates (placeholder implementation)
func (s *BiddingService) StreamBidUpdates(req interface{}, stream interface{}) error {
	// TODO: Implement when protobuf is generated
	return nil
}
